name:                HsMkv
version:             0.1.0.0
synopsis:            Simple matroska (mkv) demuxer and muxer written in Haskell
homepage:            /home/vi/home/wine/.wine/dosdevices/c:/windows/profiles/wine/Application Data
license:             MIT
author:              Vitaly "_Vi" Shukela
maintainer:          vi0oss@gmail.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  example_transmux.hs example_print.hs Test.hs
library
  exposed-modules:     Codec.HsMkv.MkvParse, Codec.HsMkv.MkvTabular, Codec.HsMkv.MkvGen
  build-depends:       base ==4.5.*, bytestring ==0.9.*, data-binary-ieee754 ==0.4.*, text ==0.11.*

-- Test-Suite test-HsMkv
--    type:       exitcode-stdio-1.0
--    main-is:    Test.hs
--    build-depends: base ==4.5.*, bytestring ==0.9.*, data-binary-ieee754 ==0.4.*, text ==0.11.*, HUnit
  
