name:                HsMkv
version:             0.1.1.0
synopsis:            Simple matroska (mkv) demuxer and muxer written in Haskell
homepage:            https://github.com/vi/HsMkv/
license:             MIT
author:              Vitaly "_Vi" Shukela
maintainer:          vi0oss@gmail.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  Test.hs ExampleTransmux.hs ExamplePrint.hs ExampleUdpSend.hs ExampleUdpRecv.hs ExampleSetpts.hs examples.hs
library
  exposed-modules:     Codec.HsMkv.MkvParse, Codec.HsMkv.MkvTabular, Codec.HsMkv.MkvGen, Codec.HsMkv.Model
  build-depends:       base >= 4.5 , bytestring >= 0.9, data-binary-ieee754 >= 0.4, text >= 0.11, containers >= 0.4

source-repository head
  type:              git
  location:          https://github.com/vi/HsMkv

-- Test-Suite test-HsMkv
--    type:       exitcode-stdio-1.0
--    main-is:    Test.hs
--    build-depends: base ==4.5.*, bytestring ==0.9.*, data-binary-ieee754 ==0.4.*, text ==0.11.*, HUnit
  
